--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Mauricio Acosta"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/headshot_circle.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Computational Scientist working in Medical Physics with a background in Data Science, Physics, and Biomedical Engineering."
   location         : "Miami, Fl"
   email            :
