Changed yaml to include header image

--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,11 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
+# Site Header
+header:
+  image: /assets/images/header.png
+  caption: "Generated with AI"
+
 # Site Footer
 footer:
   links:
